--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,11 +10,6 @@ bandit==1.7.0
 flake8-nb==0.3.0
 pytest>=5
 pytest-cov>=2
-Sphinx>=3
-sphinx_markdown_tables
-sphinx-multiversion
-sphinx_rtd_theme
-recommonmark>=0.6
 scikit-learn>=0.20
 moto>=2
 boto3==1.17
@@ -22,6 +17,13 @@ git+https://github.com/rapidsai/asvdb.git
 graphviz>=0.16
 cpplint>=1.5
 codespell
+
+# docs
+Sphinx==3.5.4
+sphinx_rtd_theme==1.0.0
+sphinx_markdown_tables==0.0.15
+sphinx-multiversion==0.2.4
+recommonmark==0.7.1
 
 # needed to make test_s3 work
 pytest-xdist
