--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,14 +3,11 @@
 
 tritonclient
 
+# testing
 pytest>=5
 pytest-cov>=2
 scikit-learn>=0.20
-moto>=2
-boto3==1.17
 git+https://github.com/rapidsai/asvdb.git
-graphviz>=0.16
-
 
 # linting
 pylint==2.7.4
@@ -29,10 +26,3 @@ sphinx_markdown_tables==0.0.15
 sphinx-multiversion==0.2.4
 recommonmark==0.7.1
 nbsphinx>=0.6
-
-# needed to make test_s3 work
-pytest-xdist
-s3fs>=2021.4
-aiobotocore>=1.3.3
-flask
-flask-cors
