--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,20 +1,21 @@
 # packages necessary to run tests and push PRs
 # assumes requirements for nvtabular logic are already installed
 
-black==21.7b0
-flake8==3.9.2
-isort==5.9.3
-nbsphinx>=0.6
-pylint==2.7.4
-bandit==1.7.0
-flake8-nb==0.3.0
+tritonclient
+
+# testing
 pytest>=5
 pytest-cov>=2
 scikit-learn>=0.20
-moto>=2
-boto3==1.17
 git+https://github.com/rapidsai/asvdb.git
-graphviz>=0.16
+
+# linting
+pylint==2.7.4
+black==21.7b0
+flake8==3.9.2
+isort==5.9.3
+bandit==1.7.0
+flake8-nb==0.3.0
 cpplint>=1.5
 codespell
 
@@ -24,10 +25,4 @@ sphinx_rtd_theme==1.0.0
 sphinx_markdown_tables==0.0.15
 sphinx-multiversion==0.2.4
 recommonmark==0.7.1
-
-# needed to make test_s3 work
-pytest-xdist
-s3fs>=2021.4
-aiobotocore>=1.3.3
-flask
-flask-cors
+nbsphinx>=0.6
