--- a/.github/workflows/cpu-ci.yml
+++ b/.github/workflows/cpu-ci.yml
@@ -39,6 +39,9 @@ jobs:
     - name: Lint with isort
       run: |
         isort -c .
+    - name: Lint with interrogate
+      run: |
+        interrogate -viImMpPsSCn -f 35.0 merlin
     - name: Lint with codespell
       run: |
         codespell
