--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,11 @@ repos:
         rev: pylint-2.7.4
         hooks:
         - id: pylint
+      - repo: https://github.com/econchick/interrogate
+        rev: 1.5.0
+        hooks:
+        - id: interrogate
+          args: [-viImMpPsSCn, -f, "35.0", merlin]
       - repo: https://github.com/codespell-project/codespell
         rev: v2.1.0
         hooks:
