--- a/.github/workflows/cpu-ci.yml
+++ b/.github/workflows/cpu-ci.yml
@@ -41,7 +41,7 @@ jobs:
         isort -c .
     - name: Lint with interrogate
       run: |
-        interrogate -viImMpPsSCn -f 35.0 merlin
+        interrogate --config=pyproject.toml
     - name: Lint with codespell
       run: |
         codespell
