--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,8 @@ repos:
         rev: 1.5.0
         hooks:
         - id: interrogate
-          args: [-viImMpPsSCn, -f, "35.0", merlin]
+          exclude: ^(docs|tests|setup.py|versioneer.py)
+          args: [--config=pyproject.toml]
       - repo: https://github.com/codespell-project/codespell
         rev: v2.1.0
         hooks:
