--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,26 @@ indent = "    "
 known_third_party = ["cudf", "cupy", "dask", "dask_cuda", "dask_cudf", "numba", "numpy", "pytest", "torch", "rmm", "tensorflow"]
 skip = ["build", ".eggs"]
 
+[tool.interrogate]
+ignore-init-method = true
+ignore-init-module = true
+ignore-magic = true
+ignore-module = true
+ignore-private = true
+ignore-property-decorators = true
+ignore-nested-classes = true
+ignore-nested-functions = true
+ignore-semiprivate = true
+ignore-setters = true
+fail-under = 35
+exclude = ["docs", "tests", "setup.py", "versioneer.py"]
+verbose = 1
+omit-covered-files = false
+quiet = false
+whitelist-regex = []
+ignore-regex = []
+color = true
+
 [tool.pytest.ini_options]
 filterwarnings = [
 		'ignore:`np.*` is a deprecated alias:DeprecationWarning',
