--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,9 +32,9 @@ ignore-nested-functions = true
 ignore-semiprivate = true
 ignore-setters = true
 fail-under = 35
-exclude = ["docs", "tests", "setup.py", "versioneer.py"]
+exclude = ["build", "docs", "examples", "tests", "setup.py", "versioneer.py"]
 verbose = 1
-omit-covered-files = false
+omit-covered-files = true
 quiet = false
 whitelist-regex = []
 ignore-regex = []
