--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ ignore = E203,E402,W503
 ignore = D100,D102,D103,D104,D105,D107,D203,D205,D211,D212,D213,D400,D401,D413,D415
 
 [codespell]
-skip = .*pb2.py,./.git,./.github,./bench,./dist,./docs/build,.*egg-info.*,versioneer.py,*.csv,*.parquet
+skip = *pb2.py,./.git,./.github,./bench,./dist,./docs/build,.*egg-info.*,versioneer.py,*.csv,*.parquet
 ignore-words = ./ci/ignore_codespell_words.txt
 count =
 quiet-level = 3
