--- a/.github/workflows/cpu-ci.yml
+++ b/.github/workflows/cpu-ci.yml
@@ -33,7 +33,7 @@ jobs:
         python -m pip install --upgrade pip setuptools==59.4.0 wheel 
         python -m pip install --no-binary=protobuf -r requirements.txt
         python -m pip install -r requirements-dev.txt
-        python -m pip install tensorflow
+        python -m pip install tensorflow torch
     - name: Lint with flake8
       run: |
         flake8 .
