docs: Add nightly build and start API
* Took a few guesses at the API.  I need
  some guidance.
* Karl provided guidance on the API--what
  should be visible vs what customers are
  unlikely to use.

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,9 @@ cover/
 
 # Sphinx documentation
 docs/build/
+docs/source/generated/
+docs/source/README.md
+docs/source/examples/
 
 # IPython
 profile_default/
