--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ pyarrow>=1.0
 tensorflow-metadata>=1.2.0
 protobuf>=3.0.0
 packaging
-merlin-core@git+https://github.com/NVIDIA-Merlin/core.git
-nvtabular@git+https://github.com/NVIDIA-Merlin/NVTabular.git
+merlin-core>=0.2.0
+nvtabular>=1.0.0
