docs: Add ext-toc and revisions for the change
Removed the examples/Getting_Started directory because
we had two READMEs and one sample notebook.  Not a good
ratio.

Revised the sample notebook after running it on Alberto's
workstation.  Wordsmithing and replacing the embedded
graphic with the output from the `tree` command.

Added use of sphinxcontrib-copydirs, sphinx-external-toc,
and MyST.

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -27,8 +27,13 @@ click<8.1.0
 Sphinx==3.5.4
 sphinx_rtd_theme==1.0.0
 sphinx_markdown_tables==0.0.15
-sphinx-multiversion==0.2.4
+sphinx-multiversion@git+https://github.com/mikemckiernan/sphinx-multiversion.git
+sphinxcontrib-copydirs@git+https://github.com/mikemckiernan/sphinxcontrib-copydirs.git
 recommonmark==0.7.1
 nbsphinx>=0.6
 Jinja2<3.1
 natsort==8.0.1
+myst-nb==0.13.2
+linkify-it-py==1.0.3
+sphinx-external-toc==0.2.4
+
