--- a/.github/workflows/cpu-ci.yml
+++ b/.github/workflows/cpu-ci.yml
@@ -31,9 +31,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools==59.4.0 wheel 
-        python -m pip install --no-binary=protobuf -r requirements.txt
         python -m pip install -r requirements-dev.txt
-        python -m pip install tensorflow torch
+        python -m pip install tensorflow
     - name: Lint with flake8
       run: |
         flake8 .
