--- a/.github/workflows/fil.yml
+++ b/.github/workflows/fil.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install xgboost lightgbm sklearn
-          conda install cuml
+          conda install cuml --channel rapidsai
       - name: Build
         run: |
           python setup.py develop
