--- a/.github/workflows/fil.yml
+++ b/.github/workflows/fil.yml
@@ -29,11 +29,12 @@ jobs:
           python -m pip install --upgrade pip setuptools==59.4.0 wheel
           python -m pip install -r requirements.txt
           python -m pip install -r requirements-dev.txt
-      - name: Install dependencies
+      - name: Install FIL pip dependencies
         run: |
-          python -m pip install --upgrade pip
           python -m pip install xgboost lightgbm sklearn
-          conda install cuml --channel rapidsai
+      - name: Install conda dependencies
+        run: |
+          conda install -c rapidsai -c nvidia -c conda-forge cuml=22.04
       - name: Build
         run: |
           python setup.py develop
