Add an Operator for Forest Inference Libary (FIL) Triton backend. (#110)
* Add an Operator for Forest Inference Libary (FIL) Triton backend.

* Add xgboost dependency for running FIL tests

* Use tritonclient for protobuf config instead of merlin systems

* Move schema creation to schema methods

* Update to use tritonclient pb2 in importorskip

* Change schema dtype to float32

* Rename FILPredict to FIL

* Update tests for xgboost data to have only one target

* Refactor XGBoost FIL op and add support for LightGBM/Scikit-Learn

* Add test for multiclass XGBoost classifier

* Move imports for FIL to compat. Update docs

* Add handling for edge case where output dim is zero

* Move fil tests to subdirectory and importorskip configuration

* Add lightgbm and scikit-learn to test installation setup

* Update sklearn import to sklearn_ensemble in compat for fil

* Add tests for sklearn and lightgbm classifiers

* Add lightgbm and sklearn to known_third_party in pyproject.toml

* Update comment and format of output_dim check

* Add support for cuml forest models

* Remove conftest and add parametrized tests for supported model types

* Add cuml to importorskip

* Add cuml to installataion for tests

* Create workflow for FIL op

* Add channel to conda install

* Update conda install with channels

* Remove tests for cuml - they don't work on CPU

* Remove importorskip for cuml in fil tests.

* Remove cuml classifier/regressor in test_fil.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ ensure_newline_before_comments = true
 line_length = 100
 balanced_wrapping = true
 indent = "    "
-known_third_party = ["cudf", "cupy", "dask", "dask_cuda", "dask_cudf", "numba", "numpy", "pytest", "torch", "rmm", "tensorflow"]
+known_third_party = ["cudf", "cupy", "dask", "dask_cuda", "dask_cudf", "numba", "numpy", "pytest", "torch", "rmm", "tensorflow", "xgboost", "lightgbm", "sklearn"]
 known_first_party = ["merlin", "nvtabular"]
 skip = ["build", ".eggs"]
 
