--- a/.github/workflows/fil.yml
+++ b/.github/workflows/fil.yml
@@ -32,6 +32,8 @@ jobs:
       - name: Install FIL pip dependencies
         run: |
           python -m pip install xgboost lightgbm sklearn
+          # version of treelite is required to match the version used in Triton
+          python -m pip install treelite==2.3.0 treelite_runtime==2.3.0
       - name: Build
         run: |
           python setup.py develop
