--- a/.github/workflows/cpu-ci.yml
+++ b/.github/workflows/cpu-ci.yml
@@ -30,9 +30,11 @@ jobs:
         sudo apt-get install -y protobuf-compiler pandoc
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip setuptools==59.4.0 wheel 
+        python -m pip install --upgrade pip setuptools==59.4.0 wheel
         python -m pip install -r requirements-dev.txt
         python -m pip install tensorflow
+        # required for ensemble tests
+        python -m pip install xgboost
     - name: Lint with flake8
       run: |
         flake8 .
