--- a/.github/workflows/cpu-ci.yml
+++ b/.github/workflows/cpu-ci.yml
@@ -28,36 +28,18 @@ jobs:
       run: |
         sudo apt-get update -y
         sudo apt-get install -y protobuf-compiler pandoc
-    - name: Install dependencies
+    - name: Install and upgrade python packages
       run: |
-        python -m pip install --upgrade pip setuptools==59.4.0 wheel
-        python -m pip install -r requirements-dev.txt
-        python -m pip install tensorflow
-        # required for ensemble tests
-        python -m pip install xgboost
-        # required for feast unit tests
-        python -m pip install "feast<0.20"
-    - name: Lint with flake8
+        python -m pip install --upgrade pip setuptools==59.4.0 wheel tox
+    - name: Lint with flake8, black, isort, interrogate, codespell
       run: |
-        flake8 .
-    - name: Lint with black
+        tox -e lint
+    - name: Run tests
       run: |
-        black --check .
-    - name: Lint with isort
+        tox -e test-cpu
+    - name: Run FIL tests
       run: |
-        isort -c .
-    - name: Lint with interrogate
-      run: |
-        interrogate --config=pyproject.toml
-    - name: Lint with codespell
-      run: |
-        codespell
-    - name: Build
-      run: |
-        pip install .
-    - name: Run unittests
-      run: |
-        python -m pytest -rxs tests/unit/
+        tox -e test-fil-cpu
     - name: Generate package for pypi
       run: |
         python setup.py sdist
@@ -68,9 +50,12 @@ jobs:
         path: dist
 
     # Build docs, treat warnings as errors
-    - name: Building docs
-      run: |
-        make -C docs html SPHINXOPTS="-W -q"
+    # - name: Building docs
+    #   uses: ammaraskar/sphinx-action@master
+    #   with:
+    #     docs-folder: "docs/"
+      # run: |
+      #   tox -e docs
     - name: Upload HTML
       uses: actions/upload-artifact@v2
       with:
