migrate github cpu build to use tox
newline

install tox in github action

forgot tox oops

remove macos version of tf

install deps for docs in gh runner

build docs with tox

use a gh action to build docs

move fil into tox file, remove docs for now

add pytest for fil tests

Add unit tests for QueryFeast op (#160)

* add feast tests

* fix mocks to not modify global variables

* combine context managers

* install feast in ci build

* mark input column as a ragged list

Co-authored-by: Karl Higley <kmhigley@gmail.com>

add xgboost serving example (#157)

* add xgboost serving example
* add integration test

add docs, remove fil specific tests

fix up deps

another typo

reenable docs

rebuild

rebuild?

fix github workflow

fix github workflow

allow warnings in docs generation

give up on tox for docs

typo

allow docs to build if there's a warning

--- a/.github/workflows/cpu-ci.yml
+++ b/.github/workflows/cpu-ci.yml
@@ -37,9 +37,6 @@ jobs:
     - name: Run tests
       run: |
         tox -e test-cpu
-    - name: Run FIL tests
-      run: |
-        tox -e test-fil-cpu
     - name: Generate package for pypi
       run: |
         python setup.py sdist
@@ -48,14 +45,10 @@ jobs:
       with:
         name: dist
         path: dist
-
-    # Build docs, treat warnings as errors
-    # - name: Building docs
-    #   uses: ammaraskar/sphinx-action@master
-    #   with:
-    #     docs-folder: "docs/"
-      # run: |
-      #   tox -e docs
+    - name: Building docs
+      run: |
+        python -m pip install -r requirements-docs.txt
+        make -C docs html SPHINXOPTS="-q"
     - name: Upload HTML
       uses: actions/upload-artifact@v2
       with:
