--- a/tox.ini
+++ b/tox.ini
@@ -1,34 +1,32 @@
+; For all tests that run in Github Actions, see
+; .github/workflows/cpu-ci.yml for the workflow definition.
+
 [tox]
 envlist = python3.8,test-gpu,test-cpu
 
 [testenv]
-deps = -rrequirements-dev.txt
 commands =
     pip install --upgrade pip
     pip install .
-allowlist_externals = sphinx-build
 
 [testenv:test-cpu]
+; Runs in: Github Actions
+; Runs all CPU-based tests. NOTE: if you are using an M1 mac, this will fail. You need to
+; change the tensorflow dependency to `tensorflow-macos` in requirements-test-cpu.txt.
 deps = -rrequirements-test-cpu.txt
 commands = python -m pytest --cov-report term --cov=merlin -rxs tests/unit/
 
 [testenv:test-gpu]
+; Runs in: Internal Jenkins
+; Runs GPU-based tests. This is not used yet.
 deps = -rrequirements-test-gpu.txt
 commands = python -m pytest --cov-report term --cov=merlin -rxs tests/unit/
 
-[testenv:test-fil-cpu]
-deps =
-    pytest
-    xgboost
-    lightgbm
-    sklearn
-    treelite==2.3.0
-    treelite_runtime==2.3.0
-commands =
-    python setup.py develop
-    python -m pytest -rxs tests/unit/systems/fil/
-
 [testenv:lint]
+; Runs in: Github Actions
+; Runs all lint/code checks and fails the PR if there are errors.
+; Install pre-commit-hooks to run these tests during development.
+deps = -rrequirements-dev.txt
 commands =
     flake8 setup.py merlin/ tests/
     black --check --diff merlin tests
@@ -38,7 +36,10 @@ commands =
     codespell --skip .tox
 
 [testenv:docs]
+; Runs in: Github Actions
+; Generates documentation with sphinx. There are other steps in the Github Actions workflow
+; to publish the documentation on release.
 changedir = {toxinidir}/docs
-deps = attrs
+deps = -rrequirements-docs.txt
 commands =
-    sphinx-build -W -q source build
+    python -m sphinx.cmd.build -P -b html source build
