--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,20 +1,10 @@
-# packages necessary to run tests and push PRs
-# assumes requirements for nvtabular logic are already installed
-
+# Required to generate docs and also run tests
 tritonclient[all]
-nvtabular
-
-# testing
-pytest>=5
-pytest-cov>=2
-scikit-learn>=0.20
-git+https://github.com/rapidsai/asvdb.git
-testbook
 
 # linting
 pylint==2.7.4
 click==8.0.3
-black==21.7b0
+black==22.6.0
 flake8==3.9.2
 isort==5.9.3
 bandit==1.7.0
@@ -23,16 +13,3 @@ cpplint>=1.5
 codespell
 interrogate==1.5.0
 click<8.1.0
-
-# docs
-Sphinx==3.5.4
-sphinx_rtd_theme==1.0.0
-sphinx-multiversion@git+https://github.com/mikemckiernan/sphinx-multiversion.git
-sphinxcontrib-copydirs@git+https://github.com/mikemckiernan/sphinxcontrib-copydirs.git
-recommonmark==0.7.1
-Jinja2<3.1
-natsort==8.0.1
-myst-nb==0.13.2
-linkify-it-py==1.0.3
-sphinx-external-toc==0.2.4
-
