install more libraries in test environment
install treelite

add torch to cpu tests

--- a/tox.ini
+++ b/tox.ini
@@ -14,13 +14,13 @@ commands =
 ; Runs all CPU-based tests. NOTE: if you are using an M1 mac, this will fail. You need to
 ; change the tensorflow dependency to `tensorflow-macos` in requirements-test-cpu.txt.
 deps = -rrequirements-test-cpu.txt
-commands = python -m pytest --cov-report term --cov=merlin -rxs tests/unit/
+commands = python -m pytest --cov-report term --cov=merlin -rxs tests/unit/systems
 
 [testenv:test-gpu]
 ; Runs in: Internal Jenkins
 ; Runs GPU-based tests. This is not used yet.
 deps = -rrequirements-test-gpu.txt
-commands = python -m pytest --cov-report term --cov=merlin -rxs tests/unit/
+commands = python -m pytest --cov-report term --cov=merlin -rxs tests/unit/systems
 
 [testenv:lint]
 ; Runs in: Github Actions
