--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,16 @@ commands =
 ; Runs in: Github Actions
 ; Generates documentation with sphinx. There are other steps in the Github Actions workflow
 ; to publish the documentation on release.
-changedir = {toxinidir}/docs
+changedir = {toxinidir}
 deps = -rrequirements-docs.txt
 commands =
-    python -m sphinx.cmd.build -P -b html source build
+    python -m sphinx.cmd.build -P -b html docs/source docs/build/html
+
+[testenv:docs-multi]
+; Run the multi-version build that is shown on GitHub Pages.
+changedir = {toxinidir}
+deps = -rrequirements-docs.txt
+commands =
+    sphinx-multiversion --dump-metadata docs/source docs/build/html | jq "keys"
+    sphinx-multiversion docs/source docs/build/html
+
