--- a/tox.ini
+++ b/tox.ini
@@ -17,10 +17,18 @@ deps = -rrequirements-test-cpu.txt
 commands = python -m pytest --cov-report term --cov=merlin -rxs tests/unit/systems
 
 [testenv:test-gpu]
+sitepackages=true
 ; Runs in: Internal Jenkins
-; Runs GPU-based tests. This is not used yet.
-deps = -rrequirements-test-gpu.txt
-commands = python -m pytest --cov-report term --cov=merlin -rxs tests/unit/systems
+; Runs GPU-based tests.
+; The jenkins jobs run on an image based on merlin-hugectr. This will include all cudf configuration
+; and other gpu-specific libraries that we can enxpect will always exist. Thus, we don't need
+; to install requirements.txt yet. As we get better at python environment isolation, we will
+; need to add some back.
+deps =
+    pytest
+    pytest-cov
+commands =
+    python -m pytest --cov-report term --cov=merlin -rxs tests/unit/systems
 
 [testenv:lint]
 ; Runs in: Github Actions
