add testenv to run merlin tests

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,25 @@ deps =
     pytest
     pytest-cov
 commands =
-    python -m pytest --cov-report term --cov=merlin -rxs tests/unit/systems
+    python -m pytest --cov-report term --cov merlin -rxs tests/unit/systems
+
+[testenv:test-merlin]
+; This runs the end-to-end tests from the NVIDIA-Merlin/Merlin repo on the jenkins machine.
+; We will check out `Merlin` from github and execute the notebooks using the current PR of systems.
+passenv=GIT_COMMIT
+sitepackages=true
+allowlist_externals = git
+deps =
+    feast<=0.20.0
+    faiss-gpu
+    pytest
+    pytest-cov
+commands =
+    ; the GIT_COMMIT is the current commit of the systems repo
+    ; NOTE!!!! We must clean this up in the jenkins configuration with `rm -rf "Merlin-$GIT_COMMIT"`
+    git clone https://github.com/NVIDIA-Merlin/Merlin.git Merlin-{env:GIT_COMMIT}
+    ; this runs the tests then removes the Merlin repo directory whether the tests work or fail
+    python -m pytest --cov merlin --cov-report term Merlin-{env:GIT_COMMIT}/tests
 
 [testenv:lint]
 ; Runs in: Github Actions
