--- a/tox.ini
+++ b/tox.ini
@@ -45,8 +45,9 @@ commands =
     ; the GIT_COMMIT is the current commit of the systems repo
     ; NOTE!!!! We must clean this up in the jenkins configuration with `rm -rf "Merlin-$GIT_COMMIT"`
     git clone https://github.com/NVIDIA-Merlin/Merlin.git Merlin-{env:GIT_COMMIT}
+    python -m pip install .
     ; this runs the tests then removes the Merlin repo directory whether the tests work or fail
-    python -m pytest --cov merlin --cov-report term Merlin-{env:GIT_COMMIT}/tests
+    python -m pytest --cov merlin --cov-report term Merlin-{env:GIT_COMMIT}/tests/unit
 
 [testenv:lint]
 ; Runs in: Github Actions
