try integration tests instead

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ commands =
     python -m pytest --cov-report term --cov merlin -rxs tests/unit/systems
 
 [testenv:test-merlin]
+; Runs in: Internal Jenkins
 ; This runs the end-to-end tests from the NVIDIA-Merlin/Merlin repo on the jenkins machine.
 ; We will check out `Merlin` from github and execute the notebooks using the current PR of systems.
 passenv=GIT_COMMIT
@@ -47,7 +48,7 @@ commands =
     git clone https://github.com/NVIDIA-Merlin/Merlin.git Merlin-{env:GIT_COMMIT}
     python -m pip install .
     ; this runs the tests then removes the Merlin repo directory whether the tests work or fail
-    python -m pytest --cov merlin --cov-report term Merlin-{env:GIT_COMMIT}/tests/unit
+    python -m pytest --cov merlin --cov-report term Merlin-{env:GIT_COMMIT}/tests/integration
 
 [testenv:lint]
 ; Runs in: Github Actions
