install missing requirements

--- a/tox.ini
+++ b/tox.ini
@@ -38,17 +38,15 @@ passenv=GIT_COMMIT
 sitepackages=true
 allowlist_externals = git
 deps =
-    feast<=0.20.0
-    faiss-gpu
-    pytest
-    pytest-cov
+    -rrequirements-gpu.txt
 commands =
     ; the GIT_COMMIT is the current commit of the systems repo
     ; NOTE!!!! We must clean this up in the jenkins configuration with `rm -rf "Merlin-$GIT_COMMIT"`
+    pip freeze
     git clone https://github.com/NVIDIA-Merlin/Merlin.git Merlin-{env:GIT_COMMIT}
     python -m pip install .
     ; this runs the tests then removes the Merlin repo directory whether the tests work or fail
-    python -m pytest --cov merlin --cov-report term Merlin-{env:GIT_COMMIT}/tests/integration
+    python -m pytest --cov merlin --cov-report term Merlin-{env:GIT_COMMIT}/tests/unit
 
 [testenv:lint]
 ; Runs in: Github Actions
