install latest commit of merlin repos

--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -3,3 +3,6 @@ feast<=0.20.0
 faiss-gpu
 pytest
 pytest-cov
+git+https://github.com/NVIDIA-Merlin/core.git
+git+https://github.com/NVIDIA-Merlin/NVTabular.git
+git+https://github.com/NVIDIA-Merlin/models.git
