--- a/tox.ini
+++ b/tox.ini
@@ -42,7 +42,11 @@ deps =
 commands =
     ; the GIT_COMMIT is the current commit of the systems repo
     ; NOTE!!!! We must clean this up in the jenkins configuration with `rm -rf "Merlin-$GIT_COMMIT"`
-    pip freeze
+    python -m pip freeze
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git
+
     git clone https://github.com/NVIDIA-Merlin/Merlin.git Merlin-{env:GIT_COMMIT}
     python -m pip install .
     ; this runs the tests then removes the Merlin repo directory whether the tests work or fail
