upgrade version of distributed

--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,7 @@ commands =
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git
     python -m pip install dask==2022.3.0
+    python -m pip install distributed==2022.3.0
     python -m pip freeze
 
     git clone https://github.com/NVIDIA-Merlin/Merlin.git Merlin-{env:GIT_COMMIT}
