move dask and distributed deps to requirements file

--- a/tox.ini
+++ b/tox.ini
@@ -40,20 +40,17 @@ allowlist_externals = git
 deps =
     -rrequirements-gpu.txt
 commands =
-    ; the GIT_COMMIT is the current commit of the systems repo
+    ; the GIT_COMMIT env is the current commit of the systems repo
     ; NOTE!!!! We must clean this up in the jenkins configuration with `rm -rf "Merlin-$GIT_COMMIT"`
-    
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git
-    python -m pip install dask==2022.3.0
-    python -m pip install distributed==2022.3.0
     python -m pip freeze
 
     git clone https://github.com/NVIDIA-Merlin/Merlin.git Merlin-{env:GIT_COMMIT}
     python -m pip install .
     ; this runs the tests then removes the Merlin repo directory whether the tests work or fail
-    python -m pytest --cov merlin --cov-report term Merlin-{env:GIT_COMMIT}/tests/unit
+    python -m pytest --cov merlin --cov-report term Merlin-{env:GIT_COMMIT}/tests/
 
 [testenv:lint]
 ; Runs in: Github Actions
