add testenv to run merlin tests (#183)
* add testenv to run merlin tests

* install systems branch, only run unit tests

* try integration tests instead

* install missing requirements

* install latest commit of merlin repos

* force upgrade

* force upgrade

* upgrade dask

* upgrade version of distributed

* move dask and distributed deps to requirements file

* only run unit tests because integration are flakey

--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -1,5 +1,6 @@
--r requirements.txt
-cudf>=21.12
-dask-cudf>=21.12
-dask-cuda>=21.12
-cupy>=7
+feast<=0.20.0
+faiss-gpu
+pytest
+pytest-cov
+dask>=2022.3.0
+distributed>=2022.3.0
