--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,28 @@ deps =
     pytest
     pytest-cov
 commands =
-    python -m pytest --cov-report term --cov=merlin -rxs tests/unit/systems
+    python -m pytest --cov-report term --cov merlin -rxs tests/unit/systems
+
+[testenv:test-merlin]
+; Runs in: Internal Jenkins
+; This runs the end-to-end tests from the NVIDIA-Merlin/Merlin repo on the jenkins machine.
+; We will check out `Merlin` from github and execute the notebooks using the current PR of systems.
+passenv=GIT_COMMIT
+sitepackages=true
+allowlist_externals = git
+deps =
+    -rrequirements-gpu.txt
+commands =
+    ; the GIT_COMMIT env is the current commit of the systems repo
+    ; NOTE!!!! We must clean this up in the jenkins configuration with `rm -rf "Merlin-$GIT_COMMIT"`
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git
+
+    git clone https://github.com/NVIDIA-Merlin/Merlin.git Merlin-{env:GIT_COMMIT}
+    python -m pip install .
+    ; this runs the tests then removes the Merlin repo directory whether the tests work or fail
+    python -m pytest --cov merlin --cov-report term Merlin-{env:GIT_COMMIT}/tests/unit
 
 [testenv:lint]
 ; Runs in: Github Actions
