Add `tritonclient` as a test dependency
This is safe to install on both CPU and GPU, and is required to run the tests in this repo.

--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -13,6 +13,7 @@ git+https://github.com/rapidsai/asvdb.git
 testbook==0.4.2
 
 # packages necessary to run tests and push PRs
+tritonclient
 feast==0.19.4
 xgboost==1.6.1
 implicit==0.6.0
