--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,5 @@
 include versioneer.py
 recursive-include merlin *.py *.proto
-include requirements.txt
-include requirements-*.txt
+include requirements/*.txt
 
 include merlin/core/_version.py
