--- a/tox.ini
+++ b/tox.ini
@@ -12,8 +12,8 @@ commands =
 [testenv:test-cpu]
 ; Runs in: Github Actions
 ; Runs all CPU-based tests. NOTE: if you are using an M1 mac, this will fail. You need to
-; change the tensorflow dependency to `tensorflow-macos` in requirements-test-cpu.txt.
-deps = -rrequirements-test-cpu.txt
+; change the tensorflow dependency to `tensorflow-macos` in requirements/test-cpu.txt.
+deps = -rrequirements/test-cpu.txt
 commands = python -m pytest --cov-report term --cov=merlin -rxs tests/unit/systems
 
 [testenv:test-gpu]
@@ -38,7 +38,7 @@ passenv=GIT_COMMIT
 sitepackages=true
 allowlist_externals = git
 deps =
-    -rrequirements-gpu.txt
+    -rrequirements/gpu.txt
 commands =
     ; the GIT_COMMIT env is the current commit of the systems repo
     ; NOTE!!!! We must clean this up in the jenkins configuration with `rm -rf "Merlin-$GIT_COMMIT"`
@@ -55,7 +55,7 @@ commands =
 ; Runs in: Github Actions
 ; Runs all lint/code checks and fails the PR if there are errors.
 ; Install pre-commit-hooks to run these tests during development.
-deps = -rrequirements-dev.txt
+deps = -rrequirements/dev.txt
 commands =
     flake8 setup.py merlin/ tests/
     black --check --diff merlin tests
@@ -69,14 +69,14 @@ commands =
 ; Generates documentation with sphinx. There are other steps in the Github Actions workflow
 ; to publish the documentation on release.
 changedir = {toxinidir}
-deps = -rrequirements-docs.txt
+deps = -rrequirements/docs.txt
 commands =
     python -m sphinx.cmd.build -P -b html docs/source docs/build/html
 
 [testenv:docs-multi]
 ; Run the multi-version build that is shown on GitHub Pages.
 changedir = {toxinidir}
-deps = -rrequirements-docs.txt
+deps = -rrequirements/docs.txt
 commands =
     sphinx-multiversion --dump-metadata docs/source docs/build/html | jq "keys"
     sphinx-multiversion docs/source docs/build/html
