Fix versioneer to get accurate version numbers
The update to versioneer in #114 resulted in us not getting versions from git.
This is because we weren't specifying the tag_prefix appropriately, and
this broke newer versions of versioneer.

Fix and add a basic unittest that would catch issues like this in the future

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,5 +28,5 @@ VCS = git
 style = pep440
 versionfile_source = merlin/systems/_version.py
 versionfile_build = merlin/systems/_version.py
-tag_prefix =
+tag_prefix = v
 parentdir_prefix = merlin-systems-
