--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ commands =
 ; Runs all CPU-based tests. NOTE: if you are using an M1 mac, this will fail. You need to
 ; change the tensorflow dependency to `tensorflow-macos` in requirements/test-cpu.txt.
 deps = -rrequirements/test-cpu.txt
-commands = python -m pytest --cov-report term --cov=merlin -rxs tests/unit/systems
+commands = python -m pytest --cov-report term --cov=merlin -rxs tests/unit
 
 [testenv:test-gpu]
 sitepackages=true
@@ -28,7 +28,7 @@ deps =
     pytest
     pytest-cov
 commands =
-    python -m pytest --cov-report term --cov merlin -rxs tests/unit/systems
+    python -m pytest --cov-report term --cov merlin -rxs tests/unit
 
 [testenv:test-merlin]
 ; Runs in: Internal Jenkins
