--- a/tox.ini
+++ b/tox.ini
@@ -14,10 +14,7 @@ commands =
 ; Runs all CPU-based tests. NOTE: if you are using an M1 mac, this will fail. You need to
 ; change the tensorflow dependency to `tensorflow-macos` in requirements/test-cpu.txt.
 deps = -rrequirements/test-cpu.txt
-allowlist_externals = git
-commands =
-    git tag --list
-    python -m pytest --cov-report term --cov=merlin -rxs tests/unit
+commands = python -m pytest --cov-report term --cov=merlin -rxs tests/unit
 
 [testenv:test-gpu]
 sitepackages=true
