Rework operators to use `DictArray` and `LocalExecutor` from Merlin Core
Depends on NVIDIA-Merlin/core#139 and NVIDIA-Merlin/core#146

We've had the concept of an `InferenceDataFrame` for a while, but it's really just a wrapper around a dictionary of arrays. That data structure is useful in a bunch of places, so this swaps out `InferenceDataFrame` for a similar class from Merlin Core called `DictArray`.

--- a/.pylintrc
+++ b/.pylintrc
@@ -63,10 +63,11 @@ disable=fixme,
     # producing false positives
     unexpected-keyword-arg,
     not-an-iterable,
-    unsubscriptable-object
+    unsubscriptable-object,
+    signature-differs
 
 [SIMILARITIES]
-min-similarity-lines=20
+min-similarity-lines=50
 ignore-comments=yes
 ignore-docstrings=yes
 ignore-imports=yes
