--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,9 @@ commands =
 ; Runs all CPU-based tests. NOTE: if you are using an M1 mac, this will fail. You need to
 ; change the tensorflow dependency to `tensorflow-macos` in requirements/test-cpu.txt.
 deps = -rrequirements/test-cpu.txt
-commands = python -m pytest --cov-report term --cov=merlin -rxs tests/unit
+commands =
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
+    python -m pytest --cov-report term --cov=merlin -rxs tests/unit
 
 [testenv:test-gpu]
 sitepackages=true
@@ -28,6 +30,7 @@ deps =
     pytest
     pytest-cov
 commands =
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
     python -m pytest --cov-report term --cov merlin -rxs tests/unit
 
 [testenv:test-merlin]
@@ -57,6 +60,7 @@ commands =
 ; Install pre-commit-hooks to run these tests during development.
 deps = -rrequirements/dev.txt
 commands =
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
     flake8 setup.py merlin/ tests/
     black --check --diff merlin tests
     pylint merlin
