Update config files to ignore `merlin/legacy` directory

--- a/.pylintrc
+++ b/.pylintrc
@@ -1,6 +1,6 @@
 [MASTER]
 
-ignore-patterns=_version.py,model_config_pb2.py
+ignore-patterns=_version.py,model_config_pb2.py,merlin/legacy
 
 extension-pkg-allow-list=hugectr,nvtabular_cpp
 
