--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ ignore-nested-functions = true
 ignore-semiprivate = true
 ignore-setters = true
 fail-under = 70
-exclude = ["build", "docs", "examples", "tests", "setup.py", "versioneer.py"]
+exclude = ["build", "docs", "examples", "tests", "setup.py", "versioneer.py", "merlin/legacy"]
 verbose = 1
 omit-covered-files = true
 quiet = false
