--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ commands =
 ; change the tensorflow dependency to `tensorflow-macos` in requirements/test-cpu.txt.
 deps = -rrequirements/test-cpu.txt
 commands =
-    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git@{posargs:main}
     python -m pip install .
     
     python -m pytest --cov-report term --cov=merlin -rxs tests/unit
