--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,8 @@ commands =
 ; change the tensorflow dependency to `tensorflow-macos` in requirements/test-cpu.txt.
 deps = -rrequirements/test-cpu.txt
 commands =
-    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git@{posargs:main}
+    ; python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git@{posargs:main}
+    python -m pip install --upgrade git+https://github.com/karlhigley/core.git@feature/merlin-dtypes
     python -m pip install .
     
     python -m pytest --cov-report term --cov=merlin -rxs tests/unit
@@ -34,7 +35,8 @@ deps =
     pytest
     pytest-cov
 commands =
-    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
+    ; python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
+    python -m pip install --upgrade git+https://github.com/karlhigley/core.git@feature/merlin-dtypes
     python -m pip install .
 
     python -m pytest --cov-report term --cov merlin -rxs tests/unit
@@ -54,6 +56,7 @@ commands =
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git
+    python -m pip install --upgrade git+https://github.com/karlhigley/core.git@feature/merlin-dtypes
 
     git clone https://github.com/NVIDIA-Merlin/Merlin.git Merlin-{env:GIT_COMMIT}
     python -m pip install .
@@ -66,7 +69,8 @@ commands =
 ; Install pre-commit-hooks to run these tests during development.
 deps = -rrequirements/dev.txt
 commands =
-    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
+    ; python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
+    python -m pip install --upgrade git+https://github.com/karlhigley/core.git@feature/merlin-dtypes
     flake8 setup.py merlin/ tests/
     black --check --diff merlin tests
     pylint merlin
