Update API and add notebook
- Update the API docs to include newer Operators
  and conversion functions for Triton Inference Server.

- Add the notebook that demonstrates how to serve
  an implicit model.

--- a/docs/source/toc.yaml
+++ b/docs/source/toc.yaml
@@ -11,5 +11,6 @@ subtrees:
             entries:
               - file: examples/Serving-Ranking-Models-With-Merlin-Systems.ipynb
               - file: examples/Serving-An-XGboost-Model-With-Merlin-Systems.ipynb
+              - file: examples/Serving-An-Implicit-Model-With-Merlin-Systems.ipynb
       - file: api
         title: API Documentation
