--- a/tox.ini
+++ b/tox.ini
@@ -15,10 +15,10 @@ commands =
 ; change the tensorflow dependency to `tensorflow-macos` in requirements/test-cpu.txt.
 deps = -rrequirements/test-cpu.txt
 commands =
-    ; python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git@{posargs:main}
-    python -m pip install --upgrade git+https://github.com/karlhigley/core.git@feature/merlin-dtypes
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git@{posargs:main}
     python -m pip install .
-    
+    python -m pip install --upgrade git+https://github.com/karlhigley/core.git@feature/merlin-dtypes
+
     python -m pytest --cov-report term --cov=merlin -rxs tests/unit
 
 [testenv:test-gpu]
@@ -35,9 +35,9 @@ deps =
     pytest
     pytest-cov
 commands =
-    ; python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
-    python -m pip install --upgrade git+https://github.com/karlhigley/core.git@feature/merlin-dtypes
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
     python -m pip install .
+    python -m pip install --upgrade git+https://github.com/karlhigley/core.git@feature/merlin-dtypes
 
     python -m pytest --cov-report term --cov merlin -rxs tests/unit
 
