Replace flake8 with ruff (which is equivalent but faster)
`ruff` is a very fast Python linter written in Rust that covers the flake8 rules in addition to a bunch of other popular linters. This sets up a config for it that covers the existing flake8 config, and adds additional linters while generating minimal errors with the existing code base. Since `pylint` is much slower than `ruff` (and I suspect slower than `flake8` too), this config executes the `ruff` checks first in order to fail fast.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,27 @@ known_third_party = ["cudf", "cupy", "dask", "dask_cuda", "dask_cudf", "numba", 
 known_first_party = ["merlin", "nvtabular"]
 skip = ["build", ".eggs"]
 
+[tool.ruff]
+exclude = [
+    'build',
+    '.eggs',
+    '*_pb2.py',
+]
+ignore = ['B905']
+line-length = 100
+select = [
+	'A', 'B', 'E', 'F', 'N', 'Q', 'S', 'W', 'C4', 'T10',
+	'BLE', 'DTZ', 'PGH', 'PLC', 'PLE', 'PLR', 'PLW', 'SIM', 'TID', 'YTT',
+	'RUF100'
+]
+
+[tool.ruff.per-file-ignores]
+"examples/criteo_benchmark.py" = ['E402']
+"examples/dataloader_bench.py" = ['E402']
+
+[tool.ruff.pydocstyle]
+convention = "numpy"
+
 [tool.interrogate]
 ignore-init-method = true
 ignore-init-module = true
