--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,34 +1,51 @@
 repos:
-      - repo: https://github.com/timothycrosley/isort
-        rev: 5.11.2
-        hooks:
-        - id: isort
-          additional_dependencies: [toml]
-          exclude: examples/.*
-      - repo: https://github.com/python/black
-        rev: 22.12.0
-        hooks:
-        - id: black
-      - repo: https://github.com/pycqa/flake8
-        rev: 6.0.0
-        hooks:
-        - id: flake8
-      - repo: https://github.com/pycqa/pylint
-        rev: v2.15.8
-        hooks:
-        - id: pylint
-      - repo: https://github.com/econchick/interrogate
-        rev: 1.5.0
-        hooks:
-        - id: interrogate
-          exclude: ^(docs|tests|setup.py|versioneer.py)
-          args: [--config=pyproject.toml]
-      - repo: https://github.com/codespell-project/codespell
-        rev: v2.2.2
-        hooks:
-        - id: codespell
-      - repo: https://github.com/PyCQA/bandit
-        rev: 1.7.4
-        hooks:
-        - id: bandit
-          args: [--verbose, -ll, -x, tests,examples,bench]
+  # imports
+  - repo: https://github.com/MarcoGorelli/absolufy-imports
+    rev: v0.3.1
+    hooks:
+      - id: absolufy-imports
+  - repo: https://github.com/timothycrosley/isort
+    rev: 5.11.4
+    hooks:
+    - id: isort
+      additional_dependencies: [toml]
+      exclude: examples/.*
+  # code style
+  - repo: https://github.com/python/black
+    rev: 22.12.0
+    hooks:
+    - id: black
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: 'v0.0.208'
+    hooks:
+      - id: ruff
+        # Respect `exclude` and `extend-exclude` settings.
+        args: ["--force-exclude"]  
+  - repo: https://github.com/pycqa/pylint
+    rev: v2.15.9
+    hooks:
+    - id: pylint
+  # notebooks
+  - repo: https://github.com/s-weigand/flake8-nb
+    rev: v0.5.2
+    hooks:
+    - id: flake8-nb
+      files: \.ipynb$
+  # documentation
+  - repo: https://github.com/econchick/interrogate
+    rev: 1.5.0
+    hooks:
+    - id: interrogate
+      exclude: ^(docs|examples|tests|setup.py|versioneer.py)
+      args: [--config=pyproject.toml]
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.2.2
+    hooks:
+    - id: codespell
+      exclude: .github/.*
+  # security
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.4
+    hooks:
+    - id: bandit
+      args: [--verbose, -ll, -x, tests,examples,bench]
