Update tox.ini to use main fork of Merlin Core

--- a/tox.ini
+++ b/tox.ini
@@ -65,8 +65,7 @@ commands =
 ; Install pre-commit-hooks to run these tests during development.
 deps = -rrequirements/dev.txt
 commands =
-    ; python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
-    python -m pip install --upgrade git+https://github.com/karlhigley/core.git@feature/merlin-dtypes
+    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
     flake8 setup.py merlin/ tests/
     black --check --diff merlin tests
     pylint merlin
