Minor fixes to the Github actions (#272)
* Skip running the test actions when PRs are closed

This leads to duplicate test runs when PRs get merged to `main`, since tests also run on pushes to `main`.

* Adjust the linter action rules to match the test actions

This action doesn't seem to be running on PRs, so making it match an action that does run.

* Change the name of the linter action from `pre-commit` to `lint`

This action still isn't running, even after adjusting the rules that trigger it. Apparently there have been some issues with parsing job names etc containing dashes (which are a special character in YAML.)

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,14 +1,17 @@
 name: lint
 
 on:
-  pull_request:
+  workflow_dispatch:
   push:
-    branches: [main]
+    branches: [ main ]
     tags:
       - v*
+  pull_request:
+    branches: [ main ]
+    types: [opened, synchronize, reopened]
 
 jobs:
-  pre-commit:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
