add transformers module for merlin models

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ deps = -rrequirements/test-cpu.txt
 commands =
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git@{posargs:main}
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git@{posargs:main}
-    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git@{posargs:main}
+    python -m pip install --upgrade "merlin-models[transformers] @ git+https://github.com/NVIDIA-Merlin/models.git@{posargs:main}"
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/dataloader.git@{posargs:main}
     python -m pip install .
     python -m pytest --cov-report term --cov=merlin -rxs tests/unit
@@ -31,7 +31,7 @@ deps = -rrequirements/test-cpu.txt
 commands =
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git@{posargs:main}
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git@{posargs:main}
-    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git@{posargs:main}
+    python -m pip install --upgrade "merlin-models[transformers] @ git+https://github.com/NVIDIA-Merlin/models.git@{posargs:main}"
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/dataloader.git@{posargs:main}
     python -m pip install .
     python -m pytest -rxs -m "postmerge" tests/
@@ -53,7 +53,7 @@ deps =
 commands =
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git@{posargs:main}
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git@{posargs:main}
-    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git@{posargs:main}
+    python -m pip install --upgrade "merlin-models[transformers] @ git+https://github.com/NVIDIA-Merlin/models.git@{posargs:main}"
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/dataloader.git@{posargs:main}
     python -m pip install .
 
@@ -76,7 +76,7 @@ deps =
 commands =
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git@{posargs:main}
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git@{posargs:main}
-    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git@{posargs:main}
+    python -m pip install --upgrade "merlin-models[transformers] @ git+https://github.com/NVIDIA-Merlin/models.git@{posargs:main}"
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/dataloader.git@{posargs:main}
     python -m pip install .
 
@@ -97,7 +97,7 @@ commands =
     ; NOTE!!!! We must clean this up in the jenkins configuration with `rm -rf "Merlin-$GIT_COMMIT"`
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git
-    python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/models.git
+    python -m pip install --upgrade "merlin-models[transformers] @ git+https://github.com/NVIDIA-Merlin/models.git@{posargs:main}"
 
     git clone https://github.com/NVIDIA-Merlin/Merlin.git Merlin-{env:GIT_COMMIT}
     python -m pip install .
