add test requirements to postmerge gpu

--- a/tox.ini
+++ b/tox.ini
@@ -73,6 +73,7 @@ setenv =
 deps =
     pytest
     pytest-cov
+    -rrequirements/test-gpu.txt
 commands =
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/core.git@{posargs:main}
     python -m pip install --upgrade git+https://github.com/NVIDIA-Merlin/NVTabular.git@{posargs:main}
