--- a/.github/workflows/postmerge-cpu.yml
+++ b/.github/workflows/postmerge-cpu.yml
@@ -7,6 +7,11 @@ on:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"
 
+  ### TEMPORARY TO GET IT TO RUN IN A PRE-MERGE PR
+  pull_request:
+    branches: [main]
+    types: [opened, synchronize, reopened]
+  ### TEMPORARY TO GET IT TO RUN IN A PRE-MERGE PR
 jobs:
   cpu-ci-postmerge:
     runs-on: ${{ matrix.os }}
