Run only implicit tests

--- a/tox.ini
+++ b/tox.ini
@@ -59,7 +59,7 @@ commands =
     python -m pip install .
 
     python -m pytest -rxs tests/unit
-    python -m pytest -rxs -m "premerge" tests/
+    python -m pytest -rxs tests/unit/systems/ops/implicit/test_op.py
 
 [testenv:test-gpu-postmerge]
 sitepackages=true
