Add OPAL_PREFIX to passenv in test-gpu-postmerge
This is required for horovod init to work correctly

--- a/tox.ini
+++ b/tox.ini
@@ -71,6 +71,8 @@ sitepackages=true
 ; need to add some back.
 setenv = 
     TF_GPU_ALLOCATOR=cuda_malloc_async
+passenv =
+    OPAL_PREFIX
 deps =
     pytest
     pytest-cov
