Try setting LD_LIBRARY_PATH for pytorch tests

--- a/tox.ini
+++ b/tox.ini
@@ -85,7 +85,7 @@ commands =
     python -m pip install .
 
     python -m pytest -rxs -m "postmerge" tests/
-    python -m pytest -rxs tests/integration
+    LD_LIBRARY_PATH="/opt/tritonserver/backends/pytorch:$LD_LIBRARY_PATH" python -m pytest -rxs tests/integration
 
 [testenv:test-merlin]
 ; Runs in: Internal Jenkins
