Add OPAL_PREFIX passenv to test-gpu tox environment

--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,8 @@ sitepackages=true
 ; need to add some back.
 setenv = 
     TF_GPU_ALLOCATOR=cuda_malloc_async
+passenv =
+    OPAL_PREFIX
 deps =
     -rrequirements/test-gpu.txt
     pytest
