Update docs theme to sphinx-book-theme

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ cover/
 
 # Sphinx documentation
 docs/build/
+docs/source/LICENSE
 docs/source/generated/
 docs/source/README.md
 docs/source/examples/
