Add env var for protocol buffers implementation

--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,7 @@ sitepackages=true
 ; need to add some back.
 setenv = 
     TF_GPU_ALLOCATOR=cuda_malloc_async
+    PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
 passenv =
     OPAL_PREFIX
 deps =
@@ -74,6 +75,7 @@ sitepackages=true
 setenv = 
     TF_GPU_ALLOCATOR=cuda_malloc_async
     LD_LIBRARY_PATH=/opt/tritonserver/backends/pytorch:{env:LD_LIBRARY_PATH}
+    PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
 passenv =
     OPAL_PREFIX
 deps =
